fix: honor line breaks in the copy

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -101,3 +101,6 @@ section {
   margin-top: 1em;
   padding: 0.5em;
 }
+
+.projects__copy_details_entry_text_line {
+}
